Forgot to add ejs and stylus as required modules

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This is a small app written to provide a poll similar to those on 
-political debates for a podcast I listen to, NSFWShow (twit.tv/nsfw). It 
+political debates for a podcast I listen to, NSFWShow 
+(http://twit.tv/nsfw). It 
 was written using Node.JS and Redis.
 
 I have included both a version written in Javascript, and a version that 
@@ -9,5 +10,7 @@ CoffeeScript, so it may not be all correct.
 Required modules:
 express
 redis
+ejs
+stylus
 
 MIT license.
